syntax = "proto3";

package gimpel.v1;

option go_package = "github.com/nohaxxjustlags/gimpel/api/go/v1;gimpelv1";

// ============================================================================
// Module-to-Agent Communication (used by honeypot modules)
// ============================================================================

message ConnectionInfo {
  string connection_id = 1;
  string source_ip = 2;
  uint32 source_port = 3;
  string dest_ip = 4;
  uint32 dest_port = 5;
  string protocol = 6;
  int64 timestamp_ns = 7;
}

message HandleConnectionRequest {
  ConnectionInfo connection = 1;
}

message HandleConnectionResponse {
  bool accepted = 1;
  int32 data_port = 2;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  bool healthy = 1;
  string status = 2;
  map<string, string> metadata = 3;
}

service ModuleService {
  rpc HandleConnection(HandleConnectionRequest) returns (HandleConnectionResponse);
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// ============================================================================
// Module Catalog & Distribution (Master -> Agent)
// ============================================================================

// ModuleImage represents a signed, deployable honeypot module
message ModuleImage {
  string id = 1;                          // Unique module identifier
  string name = 2;                        // Human-readable name
  string version = 3;                     // Semantic version (e.g., "1.2.3")
  string description = 4;                 // Module description
  
  // Image information
  string image_ref = 5;                   // OCI image reference (e.g., "gimpel/ssh-honeypot:v1.0")
  string digest = 6;                      // SHA256 digest of the image
  int64 size_bytes = 7;                   // Image size in bytes
  
  // Security
  bytes signature = 8;                    // Ed25519 signature of (id + version + digest)
  string signed_by = 9;                   // Key ID that signed this module
  int64 signed_at = 10;                   // Unix timestamp of signature
  
  // Runtime requirements
  repeated string required_capabilities = 11;  // Linux capabilities (e.g., "NET_BIND_SERVICE")
  bool requires_privileged = 12;          // Needs privileged container
  string min_agent_version = 13;          // Minimum agent version required
  
  // Protocol support
  repeated ModuleProtocol protocols = 14; // Protocols this module can handle
  
  // Resource recommendations
  ResourceRequirements resources = 15;
  
  // Metadata
  map<string, string> labels = 16;
  int64 created_at = 17;                  // Unix timestamp
  int64 updated_at = 18;                  // Unix timestamp
}

// ModuleProtocol describes a protocol the module supports
message ModuleProtocol {
  string name = 1;                        // e.g., "ssh", "http", "smtp"
  uint32 default_port = 2;                // Default port for this protocol
  bool high_interaction = 3;              // Supports high-interaction mode
}

// ResourceRequirements specifies recommended resource limits
message ResourceRequirements {
  int64 memory_mb = 1;                    // Recommended memory in MB
  int32 cpu_millicores = 2;               // Recommended CPU (1000 = 1 core)
  int64 disk_mb = 3;                      // Recommended disk space in MB
}

// ModuleCatalog contains all available modules
message ModuleCatalog {
  repeated ModuleImage modules = 1;       // List of available modules
  int64 version = 2;                      // Catalog version (monotonically increasing)
  int64 updated_at = 3;                   // Last update timestamp
  bytes signature = 4;                    // Ed25519 signature of the entire catalog
  string signed_by = 5;                   // Key ID that signed this catalog
}

// ModuleAssignment assigns specific modules to an agent
message ModuleAssignment {
  string module_id = 1;                   // Module to deploy
  string version = 2;                     // Specific version (or "latest")
  
  // Listener configuration
  repeated ListenerAssignment listeners = 3;
  
  // Override environment variables
  map<string, string> env = 4;
  
  // Override resource limits
  ResourceRequirements resource_overrides = 5;
  
  // Execution preferences
  string execution_mode = 6;              // "containerd", "userspace", etc.
  string connection_mode = 7;             // "tcp_relay", "fdpass", etc.
}

// ListenerAssignment configures a listener for a module
message ListenerAssignment {
  string id = 1;                          // Listener ID
  string protocol = 2;                    // Protocol to listen for
  uint32 port = 3;                        // Port to listen on
  bool high_interaction = 4;              // Enable high-interaction mode
}

// AgentModuleConfig contains all module assignments for an agent
message AgentModuleConfig {
  string agent_id = 1;
  repeated ModuleAssignment assignments = 2;
  int64 version = 3;                      // Config version
  bytes signature = 4;                    // Signature of this config
}

// ============================================================================
// Module Catalog Service (Master-side)
// ============================================================================

message GetCatalogRequest {
  int64 current_version = 1;              // Client's current catalog version (0 for first request)
}

message GetCatalogResponse {
  bool updated = 1;                       // True if catalog has updates
  ModuleCatalog catalog = 2;              // Full catalog (only if updated)
}

message GetModuleAssignmentsRequest {
  string agent_id = 1;
  int64 current_version = 2;              // Client's current config version
}

message GetModuleAssignmentsResponse {
  bool updated = 1;
  AgentModuleConfig config = 2;
}

message DownloadModuleRequest {
  string module_id = 1;
  string version = 2;                     // Specific version or "latest"
}

message ModuleImageChunk {
  bytes data = 1;                         // Chunk of image data
  int64 offset = 2;                       // Offset in the full image
  int64 total_size = 3;                   // Total image size
  bool is_last = 4;                       // True if this is the last chunk
}

message VerifyModuleRequest {
  string module_id = 1;
  string version = 2;
  string digest = 3;                      // Client's computed digest
}

message VerifyModuleResponse {
  bool valid = 1;                         // True if digest matches
  bytes signature = 2;                    // Module signature for verification
}

service ModuleCatalogService {
  // Get the full module catalog (with optional diff)
  rpc GetCatalog(GetCatalogRequest) returns (GetCatalogResponse);
  
  // Get module assignments for this agent
  rpc GetModuleAssignments(GetModuleAssignmentsRequest) returns (GetModuleAssignmentsResponse);
  
  // Download a module image (streaming)
  rpc DownloadModule(DownloadModuleRequest) returns (stream ModuleImageChunk);
  
  // Verify a module's integrity before running
  rpc VerifyModule(VerifyModuleRequest) returns (VerifyModuleResponse);
}
